--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -51,7 +51,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:autofillHints=""
-            android:hint="@string/email"
+            android:hint="@string/correo_electr_nico"
             android:inputType="textEmailAddress"
             android:textColor="#fff"
             android:textColorHint="#ccc" />
