--- a/app/src/main/res/layout-v21/activity_medical_evaluation.xml
+++ b/app/src/main/res/layout-v21/activity_medical_evaluation.xml
@@ -185,6 +185,7 @@
             android:layout_width="match_parent"
             android:layout_height="32dp"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/lblTipo"
                 android:layout_width="wrap_content"
@@ -196,6 +197,7 @@
                 android:textSize="16sp"
                 android:textStyle="bold"
                 tools:ignore="RtlSymmetry" />
+
             <EditText
                 android:id="@+id/txtTipoEdad"
                 android:layout_width="wrap_content"
@@ -204,7 +206,6 @@
                 android:visibility="invisible" />
 
         </LinearLayout>
-
 
 
         <TableLayout
@@ -683,6 +684,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:orientation="vertical">
 
             <ProgressBar
@@ -705,7 +707,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
 
 
             <Button
