--- a/app/src/main/res/layout/activity_check.xml
+++ b/app/src/main/res/layout/activity_check.xml
@@ -38,13 +38,13 @@
                 android:id="@+id/lblCheckDatosPersonales"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingStart="5dp"
                 android:paddingLeft="5dp"
                 android:text="@string/personales"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                tools:ignore="RtlSymmetry"
-                android:paddingStart="5dp" />
+                tools:ignore="RtlSymmetry" />
 
             <CheckBox
                 android:id="@+id/cbkParteI"
@@ -59,8 +59,8 @@
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="5dp"
-            android:paddingStart="5dp">
+            android:paddingStart="5dp"
+            android:paddingLeft="5dp">
 
             <TableRow
                 android:layout_width="match_parent"
@@ -146,30 +146,30 @@
                 android:id="@+id/lblCheckInstruccion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingStart="5dp"
                 android:paddingLeft="5dp"
                 android:text="@string/instruccion"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                tools:ignore="RtlSymmetry"
-                android:paddingStart="5dp" />
+                tools:ignore="RtlSymmetry" />
 
             <CheckBox
                 android:id="@+id/cbkParteII"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_toEndOf="@+id/lstEstadoAdoptar"
                 android:layout_toRightOf="@+id/lstEstadoAdoptar"
                 android:text="@string/cumple"
-                android:textSize="13sp"
-                android:layout_toEndOf="@+id/lstEstadoAdoptar" />
+                android:textSize="13sp" />
 
         </LinearLayout>
 
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="5dp"
-            android:paddingStart="5dp">
+            android:paddingStart="5dp"
+            android:paddingLeft="5dp">
 
             <TableRow
                 android:layout_width="match_parent"
@@ -197,13 +197,13 @@
                 android:id="@+id/lblCheckInmueble"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingStart="5dp"
                 android:paddingLeft="5dp"
                 android:text="@string/Inmueble"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                tools:ignore="RtlSymmetry"
-                android:paddingStart="5dp" />
+                tools:ignore="RtlSymmetry" />
 
             <CheckBox
                 android:id="@+id/cbkParteIII"
@@ -217,8 +217,8 @@
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="5dp"
-            android:paddingStart="5dp">
+            android:paddingStart="5dp"
+            android:paddingLeft="5dp">
 
             <TableRow
                 android:layout_width="match_parent"
@@ -243,7 +243,7 @@
                     android:layout_width="80dp"
                     android:layout_height="match_parent"
                     android:textSize="13sp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
             </TableRow>
 
         </TableLayout>
@@ -257,13 +257,13 @@
                 android:id="@+id/lblCheckRelacion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingStart="5dp"
                 android:paddingLeft="5dp"
                 android:text="@string/relacion"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                tools:ignore="RtlSymmetry"
-                android:paddingStart="5dp" />
+                tools:ignore="RtlSymmetry" />
 
             <CheckBox
                 android:id="@+id/cbkParteIV"
@@ -278,10 +278,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:paddingStart="5dp"
             android:paddingLeft="5dp"
-            android:paddingRight="10dp"
             android:paddingEnd="10dp"
-            android:paddingStart="5dp">
+            android:paddingRight="10dp">
 
             <TextView
                 android:id="@+id/lblCheckPregunta1"
@@ -411,17 +411,27 @@
 
             </LinearLayout>
 
-            <ProgressBar
-                android:id="@+id/simpleProgressBar"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="gone" />
+                android:layout_gravity="center_horizontal"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:visibility="gone" />
+                <ProgressBar
+                    android:id="@+id/simpleProgressBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:id="@+id/tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    tools:visibility="gone" />
+            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
