--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,17 +28,17 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="15dp"
+            android:autofillHints=""
             android:hint="@string/correo_electr_nico"
             android:inputType="textEmailAddress"
+            android:paddingStart="20dp"
             android:paddingLeft="20dp"
             android:paddingTop="10dp"
+            android:paddingEnd="10dp"
             android:paddingRight="10dp"
             android:paddingBottom="10dp"
             android:textColor="#fff"
-            android:textColorHint="#ccc"
-            android:paddingEnd="10dp"
-            android:autofillHints=""
-            android:paddingStart="20dp" />
+            android:textColorHint="#ccc" />
 
         <EditText
 
@@ -48,17 +48,17 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="20dp"
+            android:autofillHints=""
             android:hint="@string/contrase_a"
             android:inputType="textPassword"
+            android:paddingStart="20dp"
             android:paddingLeft="20dp"
             android:paddingTop="10dp"
+            android:paddingEnd="10dp"
             android:paddingRight="10dp"
             android:paddingBottom="10dp"
             android:textColor="#fff"
-            android:textColorHint="#ccc"
-            android:autofillHints=""
-            android:paddingEnd="10dp"
-            android:paddingStart="20dp" />
+            android:textColorHint="#ccc" />
 
         <Button
             android:id="@+id/button2"
@@ -67,9 +67,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="30dp"
-
             android:text="@string/reg_strate"
-            android:textColor="#2c2c2c"
             android:textSize="16sp" />
 
         <TextView
