--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,10 +18,10 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="283dp"
+            android:paddingStart="10dp"
             android:paddingLeft="10dp"
-            android:paddingRight="16dp"
             android:paddingEnd="16dp"
-            android:paddingStart="10dp">
+            android:paddingRight="16dp">
 
             <ImageView
                 android:id="@+id/imgPerroRescatar"
@@ -35,14 +35,14 @@
                 android:layout_width="71dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="fill_horizontal|end"
+                android:layout_marginStart="-92dp"
                 android:layout_marginLeft="-92dp"
                 android:layout_marginTop="180dp"
+                android:layout_toEndOf="@+id/imgPerroRescatar"
                 android:layout_toRightOf="@+id/imgPerroRescatar"
                 android:background="@drawable/input"
                 android:contentDescription="@string/desc"
-                app:srcCompat="@drawable/camara"
-                android:layout_marginStart="-92dp"
-                android:layout_toEndOf="@+id/imgPerroRescatar" />
+                app:srcCompat="@drawable/camara" />
 
         </RelativeLayout>
 
@@ -121,34 +121,34 @@
                     android:id="@+id/txtGuardar"
                     android:layout_width="127dp"
                     android:layout_height="match_parent"
-                    android:textAlignment="center"
+                    android:gravity="center_horizontal"
                     android:text="@string/guardar"
+                    android:textAlignment="center"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:gravity="center_horizontal" />
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/textView6"
-                    android:textAlignment="center"
                     android:layout_width="124dp"
                     android:layout_height="match_parent"
+                    android:gravity="center_horizontal"
                     android:text="@string/avistamiento"
+                    android:textAlignment="center"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:gravity="center_horizontal" />
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/textView7"
-                    android:textAlignment="center"
                     android:layout_width="123dp"
                     android:layout_height="match_parent"
+                    android:gravity="center_horizontal"
                     android:text="@string/equipo"
+                    android:textAlignment="center"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:gravity="center_horizontal" />
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
