--- a/app/src/main/res/layout/row_recycler.xml
+++ b/app/src/main/res/layout/row_recycler.xml
@@ -22,17 +22,16 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
-                <de.hdodenhof.circleimageview.CircleImageView
-                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/dog_photo"
                     android:layout_width="96dp"
                     android:layout_height="96dp"
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginEnd="5dp"
+                    android:layout_marginRight="5dp"
                     app:civ_border_color="@color/colorPrimaryDark"
-                    app:civ_border_width="2dp"
-                    android:layout_marginRight="5dp" />
+                    app:civ_border_width="2dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -88,11 +87,11 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_marginEnd="5dp"
             android:layout_height="1px"
             android:layout_marginLeft="100dp"
-            android:background="@color/colorPrimaryDark"
-            android:layout_marginRight="5dp" />
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            android:background="@color/colorPrimaryDark" />
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
