--- a/app/src/main/res/layout/row_recycler_medical_evaluation.xml
+++ b/app/src/main/res/layout/row_recycler_medical_evaluation.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:ignore="UselessParent"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    tools:ignore="UselessParent">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv"
@@ -28,11 +28,11 @@
                     android:id="@+id/imgListPerroEvaluacion"
                     android:layout_width="96dp"
                     android:layout_height="96dp"
+                    android:layout_marginStart="5dp"
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="5dp"
                     app:civ_border_color="@color/colorPrimaryDark"
-                    app:civ_border_width="2dp"
-                    android:layout_marginStart="5dp" />
+                    app:civ_border_width="2dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -44,47 +44,47 @@
                         android:id="@+id/lstEdad"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
                         android:layout_marginTop="5dp"
                         android:textSize="13sp"
-                        android:textStyle="bold"
-                        android:layout_marginStart="5dp" />
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/lstTamano"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
                         android:textSize="13sp"
-                        android:textStyle="bold"
-                        android:layout_marginStart="5dp" />
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/lstTipo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
                         android:textSize="13sp"
-                        android:textStyle="bold"
-                        android:layout_marginStart="5dp" />
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/lstSexo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
                         android:textSize="13sp"
-                        android:textStyle="bold"
-                        android:layout_marginStart="5dp" />
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/lstFracturas"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
                         android:textSize="13sp"
-                        android:textStyle="bold"
-                        android:layout_marginStart="5dp" />
+                        android:textStyle="bold" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -94,11 +94,11 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1px"
+            android:layout_marginStart="100dp"
             android:layout_marginLeft="100dp"
-            android:layout_marginRight="5dp"
-            android:background="@color/colorPrimaryDark"
             android:layout_marginEnd="5dp"
-            android:layout_marginStart="100dp" />
+            android:layout_marginRight="5dp"
+            android:background="@color/colorPrimaryDark" />
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
