--- a/app/src/main/res/layout/row_recycler_to_adopt.xml
+++ b/app/src/main/res/layout/row_recycler_to_adopt.xml
@@ -45,9 +45,9 @@
                         android:layout_alignParentTop="true"
                         android:layout_marginLeft="5dp"
                         android:layout_marginTop="5dp"
-                        android:textStyle="bold"
                         android:layout_toRightOf="@+id/imgListPerroEvaluacion"
-                        android:textSize="13sp" />
+                        android:textSize="13sp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/lstAdoptante"
@@ -55,9 +55,9 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
                         android:layout_marginLeft="5dp"
-                        android:textStyle="bold"
                         android:layout_toRightOf="@+id/imgListPerroEvaluacion"
-                        android:textSize="13sp" />
+                        android:textSize="13sp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/lstTelefono"
